--- a/package.json
+++ b/package.json
@@ -1,33 +1,42 @@
 {
-	"dependencies": {
-		"axios": "^1.6.8",
-		"bcryptjs": "^2.4.3",
-		"body-parser": "^1.20.2",
-		"cheerio": "1.0.0-rc.12",
-		"cookie-parser": "^1.4.6",
-		"cors": "^2.8.5",
-		"crypto": "^1.0.1",
-		"dotenv": "^16.4.5",
-		"express": "^4.19.2",
-		"express-validator": "^7.0.1",
-		"jsonwebtoken": "^9.0.2",
-		"mysql": "^2.18.1",
-		"mysql2": "^3.9.7",
-		"node-cron": "^3.0.3",
-		"node-fetch": "^3.3.2",
-		"node-navigator": "^1.0.1",
-		"nodemon": "^3.1.0",
-		"sequelize": "^6.37.3",
-		"sequelize-cli": "^6.6.2"
-	},
-	"name": "pokemon-react-express",
-	"version": "1.0.0",
-	"main": "app.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "nodemon server.js"
-	},
-	"author": "",
-	"license": "ISC",
-	"description": ""
+  "dependencies": {
+    "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "chai": "^5.1.1",
+    "cheerio": "1.0.0-rc.12",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-validator": "^7.0.1",
+    "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
+    "mocha": "^10.6.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.9.7",
+    "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
+    "node-navigator": "^1.0.1",
+    "nodemon": "^3.1.0",
+    "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2",
+    "sinon": "^18.0.0",
+    "supertest": "^7.0.0"
+  },
+  "name": "pokemon-react-express",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "test": "jest",
+    "start": "nodemon server.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "devDependencies": {
+    "axios-mock-adapter": "^1.22.0",
+    "mock-fs": "^5.2.0"
+  }
 }
